# build-a-public-request-to-product-system

./: .gitignore  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BACKLOG.md  DESIGN.md  POSITIONING.md  VISION.md
docs/launch/: devto.md
fixtures/: sample_posts.jsonl
site/: index.html
src/wishwright/: __init__.py  cli.py  config.py  discovery.py  evaluation.py  models.py  orchestrator.py  pipeline.py  publish.py  reply.py  runlog.py  storage.py
tests/: test_cli.py  test_config.py  test_discovery.py  test_end_to_end.py  test_evaluation.py  test_models.py  test_orchestrator.py  test_pipeline.py  test_publish.py  test_reply.py  test_runlog.py  test_site.py  test_storage.py
