[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wishwright"
version = "1.0.0"
description = "Ranks public product requests and turns approved candidates into auditable build briefs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Charlie Krug" }]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "types-PyYAML>=6.0",
]

[project.scripts]
wishwright = "wishwright.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["wishwright"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.mypy]
files = ["src"]
python_version = "3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
